--- a/README
+++ b/README
@@ -12,3 +12,50 @@ Execution
 ---------
 
 $ ./shelldone
+
+Example
+-------
+
+Actually, it does nothing yet, but I really like the following :)
+
+ziirish@carbon:~/workspace/shelldone$ valgrind ./shelldone
+==19875== Memcheck, a memory error detector
+==19875== Copyright (C) 2002-2010, and GNU GPL'd, by Julian Seward et al.
+==19875== Using Valgrind-3.6.0.SVN-Debian and LibVEX; rerun with -h for
+copyright info
+==19875== Command: ./shelldone
+==19875==
+ziirish@carbon:~/workspace/shelldone$ fdsfds fdsfd gsgds gdsgds jkjsdg hjgsdh
+gdshgds dsghds dgsgsd gdsghqf hueyuig dggds gdsuoigsd giosdg io | a | t
+nb commands: 3
+cmd: fdsfds
+argc: 14
+argv[0]: fdsfd
+argv[1]: gsgds
+argv[2]: gdsgds
+argv[3]: jkjsdg
+argv[4]: hjgsdh
+argv[5]: gdshgds
+argv[6]: dsghds
+argv[7]: dgsgsd
+argv[8]: gdsghqf
+argv[9]: hueyuig
+argv[10]: dggds
+argv[11]: gdsuoigsd
+argv[12]: giosdg
+argv[13]: io
+cmd: a
+argc: 0
+cmd: t
+argc: 0
+ziirish@carbon:~/workspace/shelldone$ quit
+==19875==
+==19875== HEAP SUMMARY:
+==19875==     in use at exit: 0 bytes in 0 blocks
+==19875==   total heap usage: 53 allocs, 53 frees, 3,763 bytes allocated
+==19875==
+==19875== All heap blocks were freed -- no leaks are possible
+==19875==
+==19875== For counts of detected and suppressed errors, rerun with: -v
+==19875== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 4 from 4)
+
